--- a/src/css/all.css
+++ b/src/css/all.css
@@ -1,15 +1,35 @@
 @font-face {
-    font-family: 'GmarketSansMedium';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
+    font-family: 'GmarketSans';
     font-style: normal;
+    font-weight: 700;
+    src: local('Gmarket Sans Bold'), local('GmarketSans-Bold'), 
+        url('http: //script .ebay .co .kr/fonts/GmarketSansBold.woff2') format('woff2'),
+        url('http: //script .ebay .co .kr/fonts/GmarketSansBold.woff') format('woff');
+}
+@font-face {
+    font-family: 'GmarketSans';
+    font-style: normal;
+    font-weight: 500;
+    src: local('Gmarket Sans Medium'), local('GmarketSans-Medium'), 
+        url('http: //script .ebay .co .kr/fonts/GmarketSansMedium.woff2') format('woff2'),
+        url('http: //script .ebay .co .kr/fonts/GmarketSansMedium.woff') format('woff');
+}
+@font-face {
+    font-family: 'GmarketSans';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Gmarket Sans Light'), local('GmarketSans-Light'), 
+        url('http: //script .ebay .co .kr/fonts/GmarketSansLight.woff2') format('woff2'),
+        url('http: //script .ebay .co .kr/fonts/GmarketSansLight.woff') format('woff');
 }
 
 *{
-    font-family: 'GmarketSansMedium';
+    font-family: 'GmarketSans';
+    font-weight: 500;
     padding:0px;
     margin:0px;
     color:#333;
+    box-sizing: border-box;
 }
 
 button{
