--- a/Front/src/css/all.css
+++ b/Front/src/css/all.css
@@ -1,12 +1,22 @@
 @font-face {
-    font-family: 'GmarketSans';
+    font-family: 'GmarketSansBold';
     font-style: normal;
     font-weight: 700;
-    src: local('Gmarket Sans Bold'), local('GmarketSans-Bold'), 
-        url('http://script.ebay.co.kr/fonts/GmarketSansBold.woff2') format('woff2'),
-        url('http://script.ebay.co.kr/fonts/GmarketSansBold.woff') format('woff');
+    src: url('../font/GMARKETSANSTTFBOLD.TTF') format('truetype');
 }
 @font-face {
+    font-family: 'GmarketSansMedium';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../font/GMARKETSANSTTFMEDIUM.TTF') format('truetype');
+}
+@font-face {
+    font-family: 'GmarketSansLight';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../font/GMARKETSANSTTFLIGHT.TTF') format('truetype');
+}
+/* @font-face {
     font-family: 'GmarketSans';
     font-style: normal;
     font-weight: 500;
@@ -21,7 +31,7 @@
     src: local('Gmarket Sans Light'), local('GmarketSans-Light'), 
         url('http://script.ebay.co.kr/fonts/GmarketSansLight.woff2') format('woff2'),
         url('http://script.ebay.co.kr/fonts/GmarketSansLight.woff') format('woff');
-}
+} */
 
 *{
     font-family: 'GmarketSans';
