--- a/Front/src/css/all.css
+++ b/Front/src/css/all.css
@@ -43,6 +43,15 @@
     border-radius: 20px;
 }
 
+#body{
+    position: relative;
+    width:100%;
+    height: 100%;
+    max-height: 1024px;
+    overflow: hidden;
+    border-radius: 0px;
+}
+
 button{
     border: 1px solid rgba(255, 255, 255, 0.4);
     font-size: 14px;
@@ -53,4 +62,25 @@ button{
 button:hover{
     background-color: rgba(85, 85, 85, 1);
     color: #f1f1f1;
+    cursor: pointer;
+}
+
+/*배경 이미지*/
+
+.bgimgFarmer {
+    position: absolute;
+    bottom: 0px;
+    left: -96px;
+    width: 775px;
+    z-index: -100;
+    border-radius: 0px;
+}
+
+.bgimgAppleM{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 591px;
+    border-radius: 0px;
+    z-index: -100;
 }
