--- a/Front/src/css/jip.css
+++ b/Front/src/css/jip.css
@@ -46,6 +46,7 @@
 }
 #joinBox > h2{
     font-size: 26px;
+    text-align: center;
     margin-bottom:40px;
 }
 #joinBox .joinText{
@@ -75,7 +76,7 @@
 .joinText > li > p > b{
     font-weight: 500;
 }
-.joinText > li > input{
+.jipInput{
     width: 198px;
     font-size: 10px;
     color: rgba(209, 209, 209, 1);
