--- a/Front/src/css/login.css
+++ b/Front/src/css/login.css
@@ -59,6 +59,7 @@
     width:180px;
     font-weight: 300;
     border: none;
+    border-radius: 0px;
     border-bottom: 1px solid #E9E9E9;
     background-color: rgba(255, 255, 255, 0.0);
 }
