--- a/Front/src/css/jip.css
+++ b/Front/src/css/jip.css
@@ -44,12 +44,15 @@
     color: #333;
     background-color: white;
 }
-#joinBox > h2{
+
+/*회원가입 조절 박스*/
+
+#joinBox > h2, #pwFBox > h2{
     font-size: 26px;
     text-align: center;
     margin-bottom:40px;
 }
-#joinBox .joinText{
+.joinText{
     width: 100%;
     padding: 20px;
     background-color: rgba(255, 255, 255, 1);
