--- a/Front/src/css/all.css
+++ b/Front/src/css/all.css
@@ -35,6 +35,10 @@
     border-radius: 0px;
 }
 
+ul{
+    list-style: none;
+}
+
 button{
     border: 1px solid rgba(255, 255, 255, 0.4);
     font-size: 14px;
