--- a/Front/src/css/all.css
+++ b/Front/src/css/all.css
@@ -36,7 +36,25 @@
 }
 
 ul{
+    width: 100%;
     list-style: none;
+}
+
+h2, h3{
+    text-align: center;
+    margin-bottom:40px;
+}
+
+h2{
+    font-size: 26px;
+}
+
+h3{
+    font-size: 24px;
+}
+
+h3 > span{
+    font-size: 16px;
 }
 
 button{
