--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -7,15 +7,54 @@
 #userMainBox{
     width: fit-content;
     margin: auto;
+    padding-top: 86px;
 }
 #userLeftBox, #userRightBox{
     width: 393px;
     height: 852px;
     float: left;
 }
+
+/*메뉴박스 */
 #userLeftBox{
+    display: block;
     border: 1px solid rgba(248, 248, 248, 1);
+    padding: 13% 8%;
 }
+.bgArrowImg{
+    width: 100%;
+    height: 22px;
+    margin-bottom: 9px;
+    color: #333;
+}
+.bgArrowImg > button{
+    width: 100%;
+    height: 22px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 20px;
+    background-color: transparent;
+}
+
+.bgArrowImg > button:hover{
+    font-weight: 700;
+    font-size: 22px;
+    color: #333;
+    background-color: transparent;
+}
+
+.bgArrowImgHover{
+    background-image: url("../assets/right_arrow_black.png");
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: 13px auto;
+}
+
+.togle{
+    padding-left: 8% ;
+}
+
+/*컨텐츠박스*/
 #userRightBox{
     background-color: rgba(248, 248, 248, 1);
 }
