front_UserJoinPage_세부수정

--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -58,3 +58,13 @@
 #userRightBox{
     background-color: rgba(248, 248, 248, 1);
 }
+
+/*AI 진단 AiDiagnosis*/
+/*자가진단 SelfDiagnosis*/
+/*진단이력관리 HisDiagnosis*/
+/*병해충 도감 DpList*/
+/*농약 및 방제 정보 FumigatorPesticides*/
+/*농약 정보 Pesticides*/
+/*농약정보 상세 PesticidesDetail*/
+/*방제 정보 Fumigator*/
+/*내정보 확인하기*/
