--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -59,7 +59,7 @@
     background-color: rgba(248, 248, 248, 1);
 }
 /*병해충 진단 Diagnosis*/
-#diMainBox{
+#diMainBox, #fpMainBox{
     position: relative;
     width: 100%;
     height: 100%;
@@ -116,7 +116,12 @@
 /*진단이력관리 HisDiagnosis*/
 /*병해충 도감 DpList*/
 /*농약 및 방제 정보 FumigatorPesticides*/
-
+#fpMainBox .userButton{
+    height: 72px;
+}
+#fpMainBox .userButton > h2{
+    margin-top: 13%;
+}
 
 /*농약 정보 Pesticides*/
 /*농약정보 상세 PesticidesDetail*/
