--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -15,6 +15,18 @@
     float: left;
 }
 
+.smallLogo{
+    width: 134px;
+    height: 30px;
+    border-radius: 0px;
+}
+
+.bigLogo{
+    width: 223px;
+    height: 50px;
+    border-radius: 0px;
+}
+
 /*메뉴박스 */
 #userLeftBox{
     display: block;
@@ -54,12 +66,14 @@
     padding-left: 8% ;
 }
 
+
+
 /*컨텐츠박스*/
 #userRightBox{
     background-color: rgba(248, 248, 248, 1);
 }
 /*병해충 진단 Diagnosis*/
-#diMainBox, #fpMainBox{
+#diMainBox, #fpMainBox, #sdMainBox{
     position: relative;
     width: 100%;
     height: 100%;
@@ -71,11 +85,7 @@
     margin-bottom: 20%;
 }
 
-.diTitle > img{
-    width: 223px;
-    height: 50px;
-    border-radius: 0px;
-}
+
 .diTitle > p{
     font-size: 20px;
     margin-top: 13px;
@@ -113,13 +123,58 @@
 
 /*AI 진단 AiDiagnosis*/
 /*자가진단 SelfDiagnosis*/
+
+#sdMainBox{
+    padding-top:30px;
+}
+#sdMainBox ul{
+    width: 80%;
+    margin-top: 20%;
+    margin: 20% auto 10% auto;
+}
+#sdMainBox li{
+    text-align: left;
+}
+#sdMainBox ul li > p{
+    font-size: 20px;
+}
+#sdMainBox ul li > p > span{
+    font-size: 12px;
+}
+#sdMainBox li > select{
+    width: 100%;
+    height: 40px;
+    padding-left: 5%;
+    margin: 5% 0 12% 0;
+    appearance: none;
+    color: rgba(153, 153, 153, 1);
+    background-color: rgba(255, 255, 255, 1);
+    border: 1px solid rgba(241, 241, 241, 1);
+    background-image: url('../assets/down_arrow_gray01.png');
+    background-repeat: no-repeat;
+    background-position: 95% center;
+}
+#sdMainBox li > select:hover{
+    color: rgba(85, 85, 85, 1);
+    border: 1px solid rgba(153, 153, 153, 1);
+    background-image: url('../assets/down_arrow_gray02.png');
+}
+#sdMainBox li > select:focus{
+    box-shadow: 0 0 1px 1px rgba(85, 85, 85, 1);
+    box-shadow: 0 0 0 1px -moz-mac-focusring;
+    outline: none;
+    color: rgba(85, 85, 85, 1);
+    background-image: url('../assets/down_arrow_gray02.png');
+}
+
+
 /*진단이력관리 HisDiagnosis*/
 /*병해충 도감 DpList*/
 /*농약 및 방제 정보 FumigatorPesticides*/
-#fpMainBox .userButton{
+#fpMainBox .userButton, #sdMainBox .userButton{
     height: 72px;
 }
-#fpMainBox .userButton > h2{
+#fpMainBox .userButton > h2, #sdMainBox .userButton > h2{
     margin-top: 13%;
 }
 
