--- a/Front/src/css/all.css
+++ b/Front/src/css/all.css
@@ -86,8 +86,8 @@ form{
 .bgimgFarmer {
     position: absolute;
     bottom: 0px;
-    left: -8%;
-    width: 775px;
+    left: 0px;
+    width: 354px;
     z-index: -100;
     border-radius: 0px;
 }
