--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -77,7 +77,7 @@
     background-color: rgba(248, 248, 248, 1);
 }
 /*병해충 진단 Diagnosis*/
-#diMainBox, #fpMainBox, #sdMainBox{
+#diMainBox, #fpMainBox, #sdMainBox, #hdMAinBox{
     position: relative;
     width: 100%;
     height: 100%;
@@ -128,7 +128,7 @@
 /*AI 진단 AiDiagnosis*/
 /*자가진단 SelfDiagnosis*/
 
-#sdMainBox{
+#sdMainBox, #hdMAinBox{
     padding-top:30px;
 }
 #sdMainBox ul{
