--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -13,6 +13,7 @@
     width: 393px;
     height: 852px;
     float: left;
+    overflow: hidden;
 }
 
 .smallLogo{
@@ -131,10 +132,10 @@
 #sdMainBox, #hdMAinBox{
     padding-top:30px;
 }
-#sdMainBox ul{
+#sdMainBox ul, #hdConBox{
     width: 80%;
     margin-top: 20%;
-    margin: 20% auto 10% auto;
+    margin: 10% auto 10% auto;
 }
 #sdMainBox li{
     text-align: left;
@@ -173,6 +174,70 @@
 
 
 /*진단이력관리 HisDiagnosis*/
+#hdConBox{
+    position: relative;
+    width: 95%;
+    height: 80%;
+    border-radius: 0px;
+    overflow-y: scroll;
+    scrollbar-gutter : stable both-edges;
+}
+
+#hdConBox::-webkit-scrollbar{/*스크롤 디자인 수정*/
+    width: 15px;
+}
+#hdConBox::-webkit-scrollbar-thumb{/*스크롤 디자인 수정*/
+    background-color: rgba(217, 217, 217, 1);
+    background-clip: padding-box;
+    border: 3px solid transparent;
+    bottom: ;order-radius: 10px;
+}
+#hdConBox::-webkit-scrollbar-track{/*스크롤 디자인 수정*/
+    background-color: rgba(217, 217, 217, 0);
+    border-radius: 10px;
+}
+.hdConBox{
+    position: relative;
+    width: 320px;
+    height: 95px;
+    padding: 12px 23px;
+    margin: 0 auto;
+    background-color: #fff;
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+.hdConBox span{
+    font-size: 12px;
+}
+.hdConBox p:not(:first-of-type){
+    font-size: 16px;
+    text-align: left;
+}
+.hdName{
+    margin-top: 10px;
+    padding-bottom: 5px;
+}
+.hdTitle{
+    display: inline-block;
+    width: 73px;
+    height: 19px;
+    background-color: rgba(76, 126, 65, 1) ;
+    color: #fff;
+    line-height: 19px;
+}
+.hdDate{
+    margin-left: 50%;
+}
+.hdDetail{
+    position: absolute;
+    bottom: 15%;
+    right: 6%;
+}
+.hdName{
+    display: block;
+}
+
+
 /*병해충 도감 DpList*/
 /*농약 및 방제 정보 FumigatorPesticides*/
 #fpMainBox .userButton, #sdMainBox .userButton{
