--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -71,14 +71,28 @@
     padding-left: 8% ;
 }
 
+/*스크롤바 컨트롤*/
 
+#hdConBox::-webkit-scrollbar, #dlConBoxResult::-webkit-scrollbar{/*스크롤 디자인 수정*/
+    width: 15px;
+}
+#hdConBox::-webkit-scrollbar-thumb, #dlConBoxResult::-webkit-scrollbar-thumb{/*스크롤 디자인 수정*/
+    background-color: rgba(217, 217, 217, 1);
+    background-clip: padding-box;
+    border: 3px solid transparent;
+    border-radius: 10px;
+}
+#hdConBox::-webkit-scrollbar-track, #dlConBoxResult::-webkit-scrollbar-track{/*스크롤 디자인 수정*/
+    background-color: rgba(217, 217, 217, 0);
+    border-radius: 10px;
+}
 
 /*컨텐츠박스*/
 #userRightBox{
     background-color: rgba(248, 248, 248, 1);
 }
 /*병해충 진단 Diagnosis*/
-#diMainBox, #fpMainBox, #sdMainBox, #pestMainBox, #hdMainBox{
+#diMainBox, #fpMainBox, #sdMainBox, #pestMainBox, #hdMainBox, #adMainBox, #dlMainBox{
     position: relative;
     width: 100%;
     height: 100%;
@@ -95,11 +109,11 @@
     font-size: 20px;
     margin-top: 13px;
 }
-.userButton{
+.userButton, .userButtonDiv{
     width: 268px;
     height: 100px;
     background-color: rgba(76, 126, 65, 1);
-    margin-bottom: 37px;
+    margin-bottom: 20px;
 }
 .userButton:last-child{
     margin-bottom: 0px;
@@ -108,13 +122,14 @@
     background-color: rgba(76, 126, 65, 1);
     box-shadow: 10%;
 }
-.userButton h2{
+.userButton h2, .userButtonDiv h2{
     font-weight: 700;
     color: white;
     box-sizing: content-box;
-    margin: 3% 0px 12% 0px;
+    margin-bottom: 0px;
 }
 .userButton p{
+    margin-top: 10%;
     font-weight: 500;
     color: white;
 }
@@ -140,6 +155,9 @@
     text-align: center;
     overflow: hidden;
 }
+.adConBox form{
+    margin-top: 20px;
+}
 
 .adConBox .userButton:not(:last-of-type){
     margin-top: 5%;
@@ -163,12 +181,25 @@
     font-weight: 700;
 }
 
+#adFileUp{
+    display: none;
+}
+label:hover{
+    cursor: pointer;
+}
+.userButtonDiv{
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 72px;
+}
+
+
 /*자가진단 SelfDiagnosis*/
 
-#sdMainBox, #pestMainBox, #hdMainBox{
+#sdMainBox, #pestMainBox, #hdMainBox, #adMainBox, #dlMainBox{
     padding-top:30px;
 }
-#sdMainBox ul, #hdConBox, #pestContentBox{
+#sdMainBox ul, #hdConBox, #pestContentBox, #dlConBox{
     width: 80%;
     margin-top: 20%;
     margin: 10% auto 10% auto;
@@ -187,51 +218,11 @@
     height: 40px;
     padding-left: 5%;
     margin: 5% 0 12% 0;
-    appearance: none;
-    color: rgba(153, 153, 153, 1);
-    background-color: rgba(255, 255, 255, 1);
-    border: 1px solid rgba(241, 241, 241, 1);
-    background-image: url('../assets/down_arrow_gray01.png');
-    background-repeat: no-repeat;
-    background-position: 95% center;
 }
-#sdMainBox li > select:hover{
-    color: rgba(85, 85, 85, 1);
-    border: 1px solid rgba(153, 153, 153, 1);
-    background-image: url('../assets/down_arrow_gray02.png');
-}
-#sdMainBox li > select:focus{
-    box-shadow: 0 0 1px 1px rgba(85, 85, 85, 1);
-    box-shadow: 0 0 0 1px -moz-mac-focusring;
-    outline: none;
-    color: rgba(85, 85, 85, 1);
-    background-image: url('../assets/down_arrow_gray02.png');
-}
-
 
 /*진단이력관리 HisDiagnosis*/
-#hdConBox{
-    position: relative;
-    width: 95%;
-    height: 80%;
-    border-radius: 0px;
-    overflow-y: scroll;
-    scrollbar-gutter : stable both-edges;
-}
 
-#hdConBox::-webkit-scrollbar{/*스크롤 디자인 수정*/
-    width: 15px;
-}
-#hdConBox::-webkit-scrollbar-thumb{/*스크롤 디자인 수정*/
-    background-color: rgba(217, 217, 217, 1);
-    background-clip: padding-box;
-    border: 3px solid transparent;
-    border-radius: 10px;
-}
-#hdConBox::-webkit-scrollbar-track{/*스크롤 디자인 수정*/
-    background-color: rgba(217, 217, 217, 0);
-    border-radius: 10px;
-}
+
 .hdConBox{
     position: relative;
     width: 320px;
@@ -285,12 +276,92 @@
     right: 6%;
 }
 /*병해충 도감 DpList*/
-/*농약 및 방제 정보 FumigatorPesticides*/
-#fpMainBox .userButton, #sdMainBox .userButton, #adConBox .userButton{
-    height: 72px;
+#dlConBox{
+    height: 80%;
 }
-#fpMainBox .userButton > h2, #sdMainBox .userButton > h2, #adConBox .userButton > h2{
-    margin-top: 13%;
+#dlConBoxResult, #hdConBox{
+    width: 100%;
+    height: 80%;
+    overflow-y: scroll;
+    scrollbar-gutter : stable both-edges;
+}
+#dlConBoxSearch{
+    width: 100%;
+}
+#dlConBoxSearch input{
+    width: 220px;
+    height: 30px;
+    line-height: 30px;
+    border: none;
+    border-bottom: 1px solid #ededed;
+    border-radius: 0px;
+    background-color: transparent;
+    margin-top: 5%;
+}
+#dlConBoxSearch button{
+    width: 90px;
+    height: 30px;
+    line-height: 30px;
+    background-color: #fff;
+    border: 1px solid #f1f1f1;
+    color: #999;
+}
+#dlConBoxSearch button:hover{
+    border: 1px solid rgba(153, 153, 153, 1);
+    color: #555;
+}
+#dlConBoxResult{
+    background-color: #fff;
+    margin-top: 22px;
+}
+.dlConBox{
+    width: 100%;
+    height: 135px;
+    margin: 0 auto;
+    padding: 20px 0px;
+    overflow: hidden;
+    border-bottom: 1px solid #ededed;
+    border-radius: 0px;
+}
+.dlConBox:last-child{
+    border-bottom: none;
+}
+.dlConTitle{
+    width: 170px;
+    padding: 10px 0;
+    text-align: left;
+}
+.dlConTitle p{
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+    margin-bottom: 12px;
+}
+.dlConTitle p span:last-child{
+    display: block;
+    text-align: center;
+    width: 90px;
+    height:28px;
+    border: 1px solid #f1f1f1;
+    float: right;
+    margin-right: 2%;
+}
+.dlConTitle h3{
+    float: left;
+}
+.dlConImg{
+    width: 100px;
+    height: 95px;
+    float: right;
+    background-color: #f1f1f1;
+}
+.dlConImg img{
+    width: 100%;
+    height: auto;
+}
+/*농약 및 방제 정보 FumigatorPesticides*/
+#fpMainBox .userButton, #sdMainBox .userButton, #adConBox .userButton, .userButtonDiv{
+    height: 72px;
 }
 
 /*농약 정보 Pesticides*/
