--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -73,16 +73,16 @@
 
 /*스크롤바 컨트롤*/
 
-#hdConBox::-webkit-scrollbar, #dlConBoxResult::-webkit-scrollbar{/*스크롤 디자인 수정*/
+#hdConBox::-webkit-scrollbar, #dlConBoxResult::-webkit-scrollbar, #pestConBoxResult::-webkit-scrollbar{/*스크롤 디자인 수정*/
     width: 15px;
 }
-#hdConBox::-webkit-scrollbar-thumb, #dlConBoxResult::-webkit-scrollbar-thumb{/*스크롤 디자인 수정*/
+#hdConBox::-webkit-scrollbar-thumb, #dlConBoxResult::-webkit-scrollbar-thumb, #pestConBoxResult::-webkit-scrollbar-thumb{/*스크롤 디자인 수정*/
     background-color: rgba(217, 217, 217, 1);
     background-clip: padding-box;
     border: 3px solid transparent;
     border-radius: 10px;
 }
-#hdConBox::-webkit-scrollbar-track, #dlConBoxResult::-webkit-scrollbar-track{/*스크롤 디자인 수정*/
+#hdConBox::-webkit-scrollbar-track, #dlConBoxResult::-webkit-scrollbar-track, #pestConBoxResult::-webkit-scrollbar-track{/*스크롤 디자인 수정*/
     background-color: rgba(217, 217, 217, 0);
     border-radius: 10px;
 }
@@ -279,16 +279,16 @@ label:hover{
 #dlConBox{
     height: 80%;
 }
-#dlConBoxResult, #hdConBox{
+#dlConBoxResult, #hdConBox, #pestConBoxResult{
     width: 100%;
     height: 80%;
     overflow-y: scroll;
     scrollbar-gutter : stable both-edges;
 }
-#dlConBoxSearch{
+#dlConBoxSearch, #pestSerch{
     width: 100%;
 }
-#dlConBoxSearch input{
+#dlConBoxSearch input, #pestSerch input{
     width: 220px;
     height: 30px;
     line-height: 30px;
@@ -298,7 +298,7 @@ label:hover{
     background-color: transparent;
     margin-top: 5%;
 }
-#dlConBoxSearch button{
+#dlConBoxSearch button,#pestSerch button{
     width: 90px;
     height: 30px;
     line-height: 30px;
@@ -306,15 +306,15 @@ label:hover{
     border: 1px solid #f1f1f1;
     color: #999;
 }
-#dlConBoxSearch button:hover{
+#dlConBoxSearch button:hover,#pestSerch button:hover{
     border: 1px solid rgba(153, 153, 153, 1);
     color: #555;
 }
-#dlConBoxResult{
+#dlConBoxResult, #pestConBoxResult{
     background-color: #fff;
     margin-top: 22px;
 }
-.dlConBox{
+.dlConBox, .pestResult{
     width: 100%;
     height: 135px;
     margin: 0 auto;
@@ -323,7 +323,7 @@ label:hover{
     border-bottom: 1px solid #ededed;
     border-radius: 0px;
 }
-.dlConBox:last-child{
+.dlConBox:last-child, .pestResult:last-child{
     border-bottom: none;
 }
 .dlConTitle{
@@ -365,8 +365,12 @@ label:hover{
 }
 
 /*농약 정보 Pesticides*/
-#pestMainBox{
-
+#pestSerch{
+    text-align: left;
+}
+.pestResult{
+    
+    text-align: left;
 }
 /*농약정보 상세 PesticidesDetail*/
 /*방제 정보 Fumigator*/
