--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -261,11 +261,12 @@ label:hover, #dlConBoxResult .dlConBox{
 }
 
 /*진단이력관리 HisDiagnosis*/
-
-
+#hdConBox{
+    width: 90%;
+}
 .hdConBox{
     position: relative;
-    width: 320px;
+    width: 100%;
     height: 95px;
     padding: 12px 23px;
     margin: 0 auto;
@@ -431,7 +432,7 @@ label:hover, #dlConBoxResult .dlConBox{
 }
 
 .fumBtnTogle{
-    
+
 }
 
 /*내정보 확인하기*/
