--- a/Front/src/css/user.css
+++ b/Front/src/css/user.css
@@ -51,14 +51,14 @@
     text-align: left;
     font-weight: 500;
     font-size: 20px;
-    background-color: transparent;
+    background-color: transparent; /*배경 색 투명*/
 }
 
 .bgArrowImg > button:hover{
     font-weight: 700;
     font-size: 22px;
     color: #333;
-    background-color: transparent;
+    background-color: transparent; /*배경 색 투명*/
 }
 
 .bgArrowImgHover{
