--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -58,17 +58,21 @@
 #adminRightBox{ /*컨텐츠가 들어있는 박스의 크기 조절하는 곳*/
     width: calc(100% - 70px);
     height: 100%;
-    overflow-y: scroll;
     border-radius: 20px;
     padding: 30px 40px 40px 50px;
     background-color: rgba(248, 248, 248, 1);
 }
-
+#adminRightCon{
+    width: 100%;
+    height: 93%;
+    overflow-y: scroll;
+}
 /*adminRightBox header 관련 css*/
 #adminRightBox header{
     position: relative;
     display: flex;
     align-items: center;
+    margin-bottom: 30px;
 }
 .adminLogo{/*로고 사이즈 설정*/
     width: 134px;
@@ -109,3 +113,137 @@
     line-height: 10px;
     text-align: center;
 }
+
+/*대시보드 css*/
+
+/*병해충 도감 css*/
+
+/*병해충 AI 검색 CSS*/
+#pmMainBox{
+    width:100%;
+    height: 100%;
+    background-color: #fff;
+}
+.pmConBox{
+    width: 100%;
+    height: 100%;
+    padding:30px;
+    
+}
+.pmConBoxR,.pmConBoxL{
+    float:left;
+}
+.pmConBoxR{
+    width: calc(100% - 233px);
+    height: 100%;
+    
+}
+.pmConChatR, .pmConChat{
+    width: 100%;
+    background-color: #f1f1f1;
+    margin-bottom: 20px;
+}
+.pmConChatR{ /*대화창*/
+    height: calc(100% - 100px);
+}
+.chatMessage { 
+    background-color: #fff;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+.chatMessage p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.chatMessage span {
+    font-size: 12px;
+    color: #888;
+    display: block;
+    text-align: right;
+}
+.pmConChat{ /*입력창 기본*/
+    position: relative;
+    height: 80px;
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.pmConChat input {
+    flex: 1;
+    padding: 10px 10px 10px 30px;
+    border-radius: 20px;
+    background-color: #f1f1f1;
+    border: none;
+}
+.pmConChat input:focus {
+    outline: none;
+    border: 1px solid #dedede;
+}
+.pmConChat > .sBtn{ /*버튼 세부 위치 조정*/
+    position: absolute;
+    top: 50%;
+    right: 5%;
+    transform: translateY(-50%);
+}
+.pmConBoxL{
+    position: relative;
+    width: 203px;
+    height: 100%;
+    margin-left: 30px;
+    padding-top: 50px;
+}
+.pmConBoxL >p{
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+.pmConBoxL >ul{
+    width: 100%;
+}
+.pmConBoxL >ul>li{
+    width: 100%;
+    height: 70px;
+    border-bottom: 1px dashed #d1d1d1;
+    border-radius: 0px;
+}
+.pmConBoxL >ul>li>p:first-child{
+    width: 203px;
+    font-size: 16px;
+    color:#555;
+    white-space: nowrap; /* 줄바꿈 방지 */
+    overflow: hidden; /* 넘치는 텍스트 숨김 */
+    text-overflow: ellipsis; /* 말 줄임 */
+    padding: 12px;
+    border-radius: 0px;
+}
+.pmConBoxL >ul>li>p:last-child{
+    width: 100%;
+    font-size: 12px;
+    color:#999;
+    text-align: right;
+}
+
+.pmConBoxL > .sBtn{ /*버튼 세부 위치 조정*/
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.sBtn{ /*공통 버튼 디자인*/
+    width: fit-content;
+    height: 40px;
+    padding: 10px 25px;
+    background-color: #fff;
+    border: 1px solid #f1f1f1;
+    color: #999;
+}
+.sBtn:hover{ /*공통 버튼 디자인 (마우스 올렸을 때) */
+    background-color: #fff;
+    border: 1px solid #999;
+    color: #555;
+}
+/*사용자 관리 CSS*/
