--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -116,6 +116,91 @@
 /*대시보드 css*/
 
 /*병해충 도감 css*/
+#pastMainBox{
+    width: 100%;
+    height: 100%;
+}
+#pastConBoxL, #pastConBoxR{
+    height: 100%;
+    float:left;
+    background-color: #fff;
+    padding: 40px;
+}
+
+#pastConBoxL{
+    width: 340px;
+    margin-right: 40px; 
+}
+#pastConBoxL p {
+    width: 133px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    border: 1px solid #f1f1f1;
+    background-color: #999; /* 기본 배경색 */
+    margin-bottom: 20px;
+}
+#pastConBoxL ul {
+    margin-bottom: 65px;
+}
+#pastConBoxL li {
+    padding: 15px;
+    cursor: pointer;
+}
+
+#pastConBoxL ul li.bold {
+    background-image: url('../assets/right_arrow_black.png');
+    background-repeat: no-repeat;
+    background-size: 8px;
+    background-position: 80% center;
+}
+.active {
+    background-color: rgba(76, 126, 65, 1) !important; /* 클릭 시 초록색으로 변경 */
+}
+#pastConBoxL input {
+    border: none;
+    border-bottom: 1px solid #d1d1d1;
+    border-radius: 0px;
+}
+#pastConBoxL input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #d1d1d1;
+    border-radius: 0px;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    float: left;
+}
+#pastConBoxL button {
+    float: right;
+}
+
+#pastConBoxR{
+    width: calc(100% - 380px);
+}
+#pastConBoxR .scroll{
+    width: 100%;
+    height: 100%;
+}
+
+#clMainBox{
+    width: 100%;
+    height: 100%;
+}
+#clMainBox div{
+    width: 170px;
+    height: fit-content;
+    float: left;
+    text-align: center;
+    padding: 10px;
+}
+#clMainBox div > img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
 
 /*병해충 AI 검색 CSS*/
 #pmMainBox{
@@ -385,7 +470,7 @@
 
 /*스크롤 공통 CSS*/
 .scroll{
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-gutter : stable both-edges;
 }
 .scroll::-webkit-scrollbar{
