front_AdminDpList 연결

--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -95,6 +95,7 @@
     height: 45px;
     line-height: 45px;
     width: 400px;
+    padding-left: 55px;
     border: #f1f1f1;
     background-color: #fff;
     background-image: url('../assets/search.png');
@@ -102,6 +103,9 @@
     background-repeat: no-repeat;
     background-position: 5% center;
     box-sizing: border-box;
+}
+#adminRightBox header > span > input{
+    outline: none;
 }
 #homeBtn{
     width:45px;
@@ -194,7 +198,7 @@
     height: fit-content;
     float: left;
     text-align: center;
-    padding: 10px;
+    margin: 10px;
 }
 #clMainBox div > img{
     width: 100%;
