--- a/Front/src/css/admin.css
+++ b/Front/src/css/admin.css
@@ -119,6 +119,56 @@
 
 /*대시보드 css*/
 
+#boardMainPage{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+#boardConUp, #boardConDL, #boardConDRU, #boardConDRD{
+    width: 100%;
+    padding: 20px;
+    background-color: #fff;
+}
+#boardConUp{
+    height: 50px;
+    margin-bottom: 15px;
+}
+#boardConDown{
+    height: calc(100%-65px);
+    display: flex;
+}
+#boardConDL{
+    flex: 1;
+    margin-right: 15px;
+}
+#boardConDR{
+    flex: 1;
+}
+#boardConDRU{
+    margin-bottom: 15px;
+}
+/* 차트 컨테이너 스타일 */
+.chart-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* 차트 박스 */
+.chart-box {
+    width: 90%;
+    max-width: 600px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+
 /*병해충 도감 css*/
 #pastMainBox{
     width: 100%;
